--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Rafa
-subtitle: Rafa's blog
-description: 我的博客
+title: Rafa's Blog
+subtitle:
+description: 角落
 keywords: '个人博客，技术博客，git，github，hexo，静态'
 author: Rafa
-language: en
+language: zh-CN
 timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://rafa.github.io
+url: https://lirifa.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -32,7 +32,7 @@ i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+new_post_name: :year-:month-:day-:title.md  # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link:
@@ -98,7 +98,51 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: nexmoe
+theme: next
+#theme_config:
+#  # Schemes
+#  #scheme: Muse
+#  scheme: Mist
+#  #scheme: Pisces
+#  #scheme: Gemini
+#
+#  # Dark Mode
+#  darkmode: true
+#
+#  favicon:
+#    small: /img/16x16.png
+#    medium: /img/16x16.png
+#    apple_touch_icon: /img/16x16.png
+#    safari_pinned_tab: /img/logo.png
+#
+#  menu:
+#    home: / || fa fa-home
+#    tags: /tags/ || fa fa-tags
+#    categories: /categories/ || fa fa-th
+#    archives: /archives/ || fa fa-archive
+#    guestbook: /guestbook/ || fa fa-book
+#    about: /about/ || fa fa-user
+#    #schedule: /schedule/ || fa fa-calendar
+#    #sitemap: /sitemap.xml || fa fa-sitemap
+#    #commonweal: /404/ || fa fa-heartbeat
+#
+#  sidebar:
+#    position: right
+#
+#  back2top:
+#    enable: true
+#    # Back to top in sidebar.
+#    sidebar: false
+#    # Scroll percent label in b2t button.
+#    scrollpercent: true
+#
+#  reading_progress:
+#    enable: true
+#    # Available values: top | bottom
+#    position: top
+#    color: "#37c6c0"
+#    height: 3px
+
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
