--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: 'Asia/Shanghai'
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
 url: https://lirifa.github.io
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :title.html
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -142,6 +142,28 @@ theme: next
 #    position: top
 #    color: "#37c6c0"
 #    height: 3px
+
+live2d:
+  enable: true
+  scriptFrom: local
+  pluginRootPath: live2dw/
+  pluginJsPath: lib/
+  pluginModelPath: assets/
+  model:
+#    use: live2d-widget-model-shizuku
+    use: live2d-widget-model-tororo
+
+  display:
+    # 设置模型的位置
+    position: left
+    width: 160
+    height: 280
+  mobile:
+    show: false
+  react:
+    opacityDefault: 1
+    opacityOnHover: 1
+
 
 
 # Deployment
