--- a/_config.yml
+++ b/_config.yml
@@ -151,7 +151,8 @@ live2d:
   pluginModelPath: assets/
   model:
 #    use: live2d-widget-model-shizuku
-    use: live2d-widget-model-tororo
+#    use: live2d-widget-model-tororo
+    use: live2d-widget-model-hijiki
 
   display:
     # 设置模型的位置
