--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hexo-server": "^2.0.0",
     "hexo-symbols-count-time": "^0.7.1",
     "hexo-wordcount": "^6.0.1",
+    "live2d-widget-model-hijiki": "^1.0.5",
     "live2d-widget-model-tororo": "^1.0.5"
   }
 }
