--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: baidu_verify_code-ghsIT3UsXz.html
 
 # Writing
 new_post_name: :year-:month-:day-:title.md  # File name of new posts
