--- a/_config.next.yml
+++ b/_config.next.yml
@@ -483,7 +483,7 @@ yandex_site_verification:
 baidu_site_verification:
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO.
-baidu_push: false
+baidu_push: true
 
 
 # ---------------------------------------------------------------
@@ -676,7 +676,7 @@ google_analytics:
   only_pageview: false
 
 # Baidu Analytics
-baidu_analytics: 27d674b90d7536bb4211025bc26fef75  # <app_id>
+baidu_analytics: e65b95711a0ae7fa2a5d53e3186cff24  # <app_id>
 
 # Growingio Analytics
 growingio_analytics: # <project_id>
