--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/next"]
 	path = themes/next
 	url = https://github.com/next-theme/hexo-theme-next
+[submodule "cdn"]
+	path = cdn
+	url = https://github.com/lirifa/cdn.git
