--- a/_config.next.yml
+++ b/_config.next.yml
@@ -126,7 +126,7 @@ sidebar:
 # Sidebar Avatar
 avatar:
   # Replace the default image and set the url here.
-  url: https://s3.ax1x.com/2020/11/17/DZYpwT.png  #/images/avatar.gif
+  url: https://p26-juejin-sign.byteimg.com/tos-cn-i-k3u1fbpfcp/3cd70fcb08bf479bb51e7607b0f53b01~tplv-k3u1fbpfcp-jj-mark-v1:0:0:0:0:5o6Y6YeR5oqA5pyv56S-5Yy6IEAg6IO95Yqb5pyJ6ZmQ6Z2S5bm0:q75.awebp?rk3s=436ef1ef&x-expires=1761125094&x-signature=BZI4j6J6Ot335J9MWDFXSiR%2BPZc%3D  #/images/avatar.gif
   # If true, the avatar will be dispalyed in circle.
   rounded: true
   # If true, the avatar will be rotated with the cursor.
@@ -567,7 +567,7 @@ comments:
   style: tabs
   # Choose a comment system to be displayed by default.
   # Available values: changyan | disqus | disqusjs | gitalk | livere | valine
-  active: valine
+  active: livere
   # Setting `true` means remembering the comment system selected by the visitor.
   storage: true
   # Lazyload all comment systems.
@@ -609,7 +609,7 @@ changyan:
 # Valine
 # For more information: https://valine.js.org, https://github.com/xCss/Valine
 valine:
-  enable: true
+  enable: false
   appId: pL5f7A0sLfJNVYHvepBWv0QL-MdYXbMMI
   appKey: 36SL4zjI54zPkb4d3QvT40iB
 #  appId: SrfsHnowMKGFV98dUhS51HY0-gzGzoHsz
@@ -628,7 +628,7 @@ valine:
 
 # LiveRe comments system
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-livere_uid: # <your_uid>
+livere_uid: MTAyMC82MDk1Ni8zNzQyNg== # <your_uid>
 
 # Gitalk
 # For more information: https://gitalk.github.io, https://github.com/gitalk/gitalk
@@ -862,7 +862,7 @@ vendors:
   # The default CDN provider of third-party plugins.
   # Available values: local | jsdelivr | unpkg | cdnjs
   # Dependencies for `plugins: local`: https://github.com/next-theme/plugins
-  plugins: jsdelivr
+  plugins: unpkg
 
   # In the following settings, you can specify the CDN link for each plugin.
   # If left blank, the default CDN provider set by `plugins` option will be used.
