--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baidusitemap:
   path: baidusitemap.xml
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: https://lirifa.gitee.io
+url: https://lirifa.github.io
 root: /
 permalink: :title.html
 permalink_defaults:
